fix: fixed html file

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 		    </div>
 	
 			<div class="text-hero">
-				<div class="text text1"><p>Iron man</p></div>
+				<div class="text text1"><p>Iron-man</p></div>
 				<div class="text text2"><p>Capitan america</p></div>
 				<div class="text text3"><p>Tor</p></div>
 				<div class="text text4"><p>Halk</p></div>
-				<div class="text text5"><p>Spider men</p></div>
+				<div class="text text5"><p>Spider-men</p></div>
 			</div>
 	   </div>
     </div>
